syntax = "proto3";
package mes;
service MesService {
    rpc GetMesInRoom (RoomId) returns (MesList) {}
    rpc Insert (MesIsert) returns (Empty) {}
}

message Empty {}

message RoomId {
    string roomId =1;
}

message Mes {
    string _id = 1;
    string senderId = 2;
    string roomId = 3;
    string conten = 4;
    string createdAt = 5;
    string reply = 6;
}
message MesList {
    repeated Mes mess = 1;
}
message MesIsert {
    string senderId = 2;
    string roomId = 3;
    string conten = 4;
    string reply = 6;
}
