// Original file: protos/mes.proto


export interface Mes {
  '_id'?: (string);
  'senderId'?: (string);
  'roomId'?: (string);
  'conten'?: (string);
  'createdAt'?: (string);
  'reply'?: (string);
}

export interface Mes__Output {
  '_id'?: (string);
  'senderId'?: (string);
  'roomId'?: (string);
  'conten'?: (string);
  'createdAt'?: (string);
  'reply'?: (string);
}
